--- a/index.html
+++ b/index.html
@@ -2,45 +2,80 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Squid Game Doll Viewer</title>
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
-    body { margin: 0; overflow: hidden; }
-    canvas { display: block; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    body {
+      background-color: #000;
+      color: #fff;
+      overflow: hidden;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      width: 100vw;
+    }
+
+    .viewer-section {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    model-viewer {
+      width: 100%;
+      height: 100%;
+      background-color: #000;
+    }
+
+    .music-controls {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      z-index: 10;
+    }
+
+    .mute-button {
+      background-color: #222;
+      border: 1px solid #555;
+      color: white;
+      padding: 5px 10px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <script type="module">
-    import * as THREE from 'https://unpkg.com/three@0.150.1/build/three.module.js';
-    import { GLTFLoader } from 'https://unpkg.com/three@0.150.1/examples/jsm/loaders/GLTFLoader.js';
-    import { OrbitControls } from 'https://unpkg.com/three@0.150.1/examples/jsm/controls/OrbitControls.js';
+  <div class="container">
+    <!-- Model Viewer -->
+    <div class="viewer-section">
+      <!-- 👇 Replace this path with the correct one for your doll.glb -->
+      <model-viewer src="doll.glb" autoplay camera-controls disable-zoom shadow-intensity="1" exposure="1.2" style="background-color: transparent;">
+      </model-viewer>
 
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-    camera.position.set(0, 1.5, 3);
+      <!-- Background Music -->
+      <div class="music-controls">
+        <audio id="bg-music" src="https://ia902701.us.archive.org/27/items/squid-game-theme/Squid%20Game%20Theme.mp3" autoplay loop></audio>
+        <button class="mute-button" onclick="toggleMute()">Mute</button>
+      </div>
+    </div>
+  </div>
 
-    const renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
-
-    const light = new THREE.HemisphereLight(0xffffff, 0x444444, 1.5);
-    scene.add(light);
-
-    const controls = new OrbitControls(camera, renderer.domElement);
-
-    const loader = new GLTFLoader();
-    loader.load('doll.glb', (gltf) => {
-      const model = gltf.scene;
-      model.scale.set(1, 1, 1);
-      scene.add(model);
-    }, undefined, (error) => {
-      console.error('Error loading model:', error);
-    });
-
-    function animate() {
-      requestAnimationFrame(animate);
-      renderer.render(scene, camera);
+  <script>
+    const bgMusic = document.getElementById("bg-music");
+    function toggleMute() {
+      bgMusic.muted = !bgMusic.muted;
     }
-    animate();
   </script>
 </body>
 </html>
