--- a/index.html
+++ b/index.html
@@ -1,75 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Squid Game Doll</title>
-    <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-      }
-      canvas {
-        display: block;
-      }
-    </style>
-  </head>
-  <body>
-    <!-- three.js CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
-    <!-- GLTFLoader -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/examples/js/loaders/GLTFLoader.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <title>Squid Game Doll</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+  </style>
+</head>
+<body>
+  <script type="module">
+    import * as THREE from 'https://unpkg.com/three@0.154.0/build/three.module.js';
+    import { GLTFLoader } from 'https://unpkg.com/three@0.154.0/examples/jsm/loaders/GLTFLoader.js';
+    import { OrbitControls } from 'https://unpkg.com/three@0.154.0/examples/jsm/controls/OrbitControls.js';
 
-    <script>
-      let scene, camera, renderer, doll;
+    let scene, camera, renderer, doll;
 
-      init();
-      animate();
+    init();
+    animate();
 
-      function init() {
-        scene = new THREE.Scene();
-        scene.background = new THREE.Color(0x000000);
+    function init() {
+      scene = new THREE.Scene();
+      scene.background = new THREE.Color(0xeeeeee);
 
-        camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 100);
-        camera.position.set(0, 1.5, 4);
+      camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+      camera.position.set(0, 1.5, 4);
 
-        renderer = new THREE.WebGLRenderer({ antialias: true });
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.body.appendChild(renderer.domElement);
+      renderer = new THREE.WebGLRenderer({ antialias: true });
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.body.appendChild(renderer.domElement);
 
-        // Light
-        const light = new THREE.HemisphereLight(0xffffff, 0x444444);
-        light.position.set(0, 20, 0);
-        scene.add(light);
+      const light = new THREE.HemisphereLight(0xffffff, 0x444444, 1.2);
+      scene.add(light);
 
-        // Load GLB
-        const loader = new THREE.GLTFLoader();
-        loader.load('doll.glb', function (gltf) {
+      const controls = new OrbitControls(camera, renderer.domElement);
+      controls.target.set(0, 1, 0);
+      controls.update();
+
+      const loader = new GLTFLoader();
+      loader.load(
+        'doll.glb', // Make sure this file is served correctly relative to index.html
+        function (gltf) {
           doll = gltf.scene;
           scene.add(doll);
-        }, undefined, function (error) {
-          console.error('GLTF load error:', error);
-        });
+        },
+        undefined,
+        function (error) {
+          console.error('Error loading model:', error);
+        }
+      );
 
-        window.addEventListener('resize', onWindowResize, false);
+      window.addEventListener('resize', onWindowResize, false);
+    }
 
-        // Click event example
-        window.addEventListener('click', () => {
-          if (doll) {
-            doll.rotation.y += Math.PI / 2; // Rotate on click
-          }
-        });
+    function onWindowResize() {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    }
+
+    function animate() {
+      requestAnimationFrame(animate);
+      if (doll) doll.rotation.y += 0.005;
+      renderer.render(scene, camera);
+    }
+
+    // Optional click interaction
+    window.addEventListener('click', () => {
+      if (doll) {
+        doll.rotation.y += Math.PI / 2;
       }
-
-      function onWindowResize() {
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-      }
-
-      function animate() {
-        requestAnimationFrame(animate);
-        renderer.render(scene, camera);
-      }
-    </script>
-  </body>
+    });
+  </script>
+</body>
 </html>
