--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     body { margin: 0; overflow: hidden; }
     canvas { display: block; }
   </style>
+  <script type="importmap">
+        {
+            "imports": {
+                "three": "https://unpkg.com/three@0.138.0/build/three.module.js",
+                "OrbitControls": "https://unpkg.com/three@0.138.0/examples/jsm/controls/OrbitControls.js"
+            }
+        }
+    </script>
 </head>
 <body>
   <script type="module">
