--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         {
             "imports": {
                 "three": "https://unpkg.com/three@0.154.0/build/three.module.js",
-                "GLTFLoader": "https://unpkg.com/three@0.154.0/examples/jsm/loaders/GLTFLoader.js";
+                "GLTFLoader": "https://unpkg.com/three@0.154.0/examples/jsm/loaders/GLTFLoader.js",
                 "OrbitControls": "https://unpkg.com/three@0.154.0/examples/jsm/controls/OrbitControls.js"
             }
         }
